# rr

./: CMakeLists.txt
example/: CMakeLists.txt  build-info.hpp.in  main.cpp
examples/: 01-basic.cpp  CMakeLists.txt  vulkan-functions.hpp
include/: rr.hpp
include/rr/: error.hpp
src/: CMakeLists.txt
src/error/: CMakeLists.txt
src/error/include/: error.hpp
src/li/: CMakeLists.txt  li.cpp
src/li/include/: li.hpp
src/mm/: CMakeLists.txt  mm.cpp
src/mm/include/: mm.hpp
src/vk/: CMakeLists.txt  check.cpp  device.cpp  global.cpp  instance.cpp
src/vk/include/: vk.hpp
src/vk/include/vk/: check.hpp  device.hpp  global.hpp  instance.hpp  util.hpp  vulkan-functions.hpp
src/window/: CMakeLists.txt  window.cpp  windows_window.cpp  xcb_window.cpp
src/window/include/: event.hpp  keys.hpp  window.hpp  windows_window.hpp  xcb_window.hpp
